# nep_auto

./: .gitignore  NEP Auto Initialization Test.md  nep.txt  nep_select_fps.py  pyproject.toml
nep_auto/: OVERVIEW.md  README.md  __init__.py  config.py  config_example.yaml  first_train.py  initialize.py  iteration.py  main.py  maxvol.py
nep_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_nep_auto/: test_config.yaml
test_nep_auto/input/: INCAR  KPOINTS  POTCAR  model.xyz
test_nep_auto/work/iter_0/: active_set.xyz  train.xyz
test_nep_auto/work/iter_0/gpumd/test_300K/: job.sh  model.xyz  run.in
